--- a/todo.txt
+++ b/todo.txt
@@ -1,26 +1,5 @@
-const mongoose = require('mongoose');
-
-let isConnected;
-
-const connectToDatabase = async () => {
-  if (isConnected) {
-    // If already connected, return the existing connection
-    return;
-  }
-
-  // Establish a new connection
-  try {
-    const db = await mongoose.connect(process.env.MONGO_URI, {
-      useNewUrlParser: true,
-      useUnifiedTopology: true,
-      serverSelectionTimeoutMS: 30000, // Increase timeout to handle cold starts
-    });
-    isConnected = db.connections[0].readyState;
-    console.log('Connected to MongoDB');
-  } catch (error) {
-    console.error('Error connecting to MongoDB:', error);
-    throw error;
-  }
-};
-
-module.exports = connectToDatabase;
+- search product
+- quantity limit
+- react toast
+- dev & prod branch
+- change env file in react
