product search prototype

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,9 @@
 - search product
 - quantity limit
 - react toast
+
+cara main search:
+- input keyword di header & submit
+- navigate ke product page dengan location state
+- useEffect product page: if ada keyword di state, loadProduct dengan keyword
+- 
